@@ -37,6 +37,9 @@ Minor Changes:
  * @firstexit can now take multiple exits, and can affect exits in other
    rooms. Suggested by AnneLions. [MG]
  * Changed some default mush.cnf options. [MG]
+ * Remove the old patches.h way of showing installed patches. It was 
+   broken and rarely used anyways.
+ * Removed the little-used "page_cost" @config option. [MG]
 
 Functions
  * llocks() without any arguments returns a list of the
