@@ -44,6 +44,7 @@ Minor Changes:
  * Changed some default mush.cnf options. [MG]
  * Remove the old patches.h way of showing installed patches. It was 
    broken and rarely used anyways.
+ * Removed the little-used "page_cost" @config option. [MG]
 
 Functions
  * llocks() without any arguments returns a list of the
